footer & pricing w features & faq

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,8 @@
   --poppy: #d64045ff;
   --poppy-dark: #ca2b30;
   --mint-green: #e9fff9ff;
-  --non-photo-blue: #9ed8dbff;
+  /* --non-photo-blue: #9ed8dbff; */
+  --non-photo-blue: #67d1d6;
   --ucla-blue: #467599ff;
   --delft-blue: #1d3354ff;
 }
