--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,3 +23,19 @@ body {
   background: var(--background);
   font-family: "Parkinsans", serif;
 }
+
+.perspective-1000 {
+  perspective: 1000px;
+}
+
+.transform-style-3d {
+  transform-style: preserve-3d;
+}
+
+.backface-hidden {
+  backface-visibility: hidden;
+}
+
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
